<resources>
    <string name="app_name">BugsBanny</string>

    <string name="add_expenses">Добавить расход</string>
    <string name="calc">Калькулятор</string>
    <string name="view_exp">Просмотр затрат</string>
    <string name="add_expenses_category">Добавить \nкатегорию</string>
    <string name="view_diagram">Диаграмма</string>
    <string name="settings">Настройки</string>

    <string name="d1">Дорога</string>
    <string name="d2">Продукты питания</string>
    <string name="d3">Продтовары</string>
    <string name="d4">Связь (интернет, телефон)</string>
    <string name="d5">Квартплата</string>
    <string name="d6">Коммуналка</string>
    <string name="d7">Платежи</string>
    <string name="d8">Другое</string>

    <string name="item2">Просмотр затрат</string>
    <string name="item3">Диаграмма</string>
    <string name="item4">Настройки</string>
    <string name="item5">О программе</string>

    <string name="grn">грн.</string>
    <string name="ok">OK</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="s1">Без сортировки</string>
    <string name="s2">От большего</string>
    <string name="s3">От меньшего</string>

    <string name="diagram1">Столбиковая диаграмма</string>
    <string name="diagram2">Круговая диаграмма</string>

    <string name="menu_title">Выбрать действие:</string>
    <string name="menu_edit_summ">Редактировать</string>
    <string name="menu_delete_summ">Удалить</string>
    <string name="menu_delete_summ_message">Вы действительно хотите удалить запись:\n</string>

    <string name="choose_color_title">Выбрать цвет</string>
    <string name="choose_month">Выбрать месяц</string>
    <string name="choose_year">Выбрать год</string>
    <string name="view_expenses">Просмотр затрат</string>
    <string name="view_calc_period">Просмотр за:</string>
    <string name="union_money">Общая сумма:</string>
    <string name="view_graph">Построить график</string>
    <string name="choose_exp">Выбрать категорию</string>
    <string name="choose_date_begin">Выбрать начальную дату</string>
    <string name="choose_date_end">Выбрать конечную дату</string>
    <string name="view_exp_all">Показать все категории</string>
    <string name="view_exp_detail_empty">За данный период данных не найдено!</string>
    <string name="action_settings">BugsBanny</string>

    <string name="pref_language_title_category">Локализация</string>
    <string name="choose_color_title_err">Необходимо выбрать цвет</string>
    <string name="msg_edit_del_category">Для категорий по умолчанию, запрещено редактирование и удаление!</string>
    <string name="add_category">Название категории</string>
    <string name="color_primer">Цвет категории</string>
    <string name="choose_color">Выбрать цвет для \nкатегории</string>
    <string name="list_category">Список категорий</string>
    <string name="success_add_exp">Успешно добавили новую запись!</string>
    <string name="err_add_exp">Успешно добавили новую запись!</string>
    <string name="date_now">Сегодня:</string>
    <string name="category_name">Категория:</string>
    <string name="summ_exp">Сумма расходов:</string>
    <string name="add_exp">Добавить расход</string>
    <string name="date_switch">Выбрать другую дату:</string>

    <string name="msg_pref_lang">Перезапустите программу для изменения языка</string>
    <string name="title_activity_add_category">Добавить новую категорию</string>
    <string name="title_activity_activity_add_new_expenses">Добавить новую затрату</string>
    <string name="title_activity_activity_view_expenses">Просмотр затрат</string>
    <string name="title_activity_activity_view_expenses_detail">Просмотр затрат</string>
    <string name="title_activity_activity_paint_graph_view">Параметры диаграммы</string>
    <string name="title_activity_activity_view_graph">Диаграмма затрат за месяц</string>
    <string name="title_activity_activity_view_expenses_detail_all">Просмотр затрат</string>
    <string name="title_activity_preferences">Настройки</string>
    <string name="Restart">Перезапуск</string>
    <string name="LangTitle">Язык</string>
    <string name="LangDialogTitle">Выберите язык:</string>
    <string name="LangSummary">Язык приложения.\nНеобходимо перезапустить приложение для принятия изменений.</string>
</resources>
