<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/item4">
        <menu>
            <item
                android:id="@+id/item2"
                android:icon="@mipmap/view_exp"
                android:showAsAction="always"
                android:title="@string/item2"></item>
            <item
                android:id="@+id/item3"
                android:icon="@mipmap/diagram"
                android:showAsAction="always"
                android:title="@string/item3"></item>

            <item
                android:id="@+id/item4"
                android:icon="@mipmap/settings"
                android:showAsAction="always"
                android:title="@string/item4"></item>

            <item
                android:id="@+id/item5"
                android:icon="@mipmap/ic_launcher"
                android:showAsAction="always"
                android:title="@string/item5"></item>
        </menu>
    </item>
</menu>

    <!--<menu xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--tools:context=".MainActivity">--><!--<item--><!--android:id="@+id/action_settings"--><!--android:orderInCategory="100"--><!--android:title="@string/action_settings" />--><!--</menu>-->