<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/back_fon2"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.example.valentin.bugsbanny.ActivityAddCategory">

    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/scroll"
        android:layout_gravity="bottom"
        android:focusableInTouchMode="false"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:padding="3dip">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/add_category"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:lines="1"
            android:linksClickable="false"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/color_primer"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/color_chooser"
            android:text="@string/choose_color"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/btn_add_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/add_category"
                android:text="@string/add_expenses_category"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cancel_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/cancel"
                android:text="@string/cancel"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="13dip"
            android:text="@string/list_category"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:divider="@drawable/separator"
        android:gravity="top" />


</LinearLayout>
