<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/back_fon6"
    android:padding="15dp"
    android:weightSum="1"
    tools:context="com.example.valentin.bugsbanny.ActivityPaintGraphView">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:text="@string/choose_month" />

    <Button
        android:id="@+id/btn_graph"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15"
        android:drawableLeft="@mipmap/diagram"
        android:text="@string/view_graph"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/textView8"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:popupBackground="@android:color/transparent" />

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:popupBackground="@android:color/transparent" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="3dp"
        android:text="@string/choose_year" />

    <SeekBar
        android:id="@+id/seekBarOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:max="2"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" />

    <TextView
        android:id="@+id/textSeekPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarOrder"
        android:layout_centerHorizontal="true"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/radiogrButtonDiagram"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/seekBarOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="32dp">

        <RadioButton
            android:id="@+id/radioButtonDiagram1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/diagram1" />

        <RadioButton
            android:id="@+id/radioButtonDiagram2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/diagram2" />
    </RadioGroup>

</RelativeLayout>
