<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/back_fon5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.valentin.bugsbanny.ActivityViewExpenses">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/switch_view_all_category"
        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        android:text="@string/choose_exp"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:focusable="false"
        android:popupBackground="@android:color/transparent"
        android:theme="@android:style/Theme" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/spinner_category"
        android:paddingTop="15dp"
        android:text="@string/choose_date_begin"
        android:textSize="20dp" />

    <!--<DatePicker-->
    <!--android:id="@+id/datePicker_category"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_below="@+id/textView5" />-->

    <Button
        android:id="@+id/datePicker_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:text="00.00.0000"
        android:textColor="#0800ff"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/datePicker_category"
        android:paddingTop="15dp"
        android:text="@string/choose_date_end"
        android:textSize="20dp" />

    <!--<DatePicker-->
    <!--android:id="@+id/datePicker_category_end"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_below="@+id/textView6" />-->

    <Button
        android:id="@+id/datePicker_category_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:text="00.00.0000"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_view_detail"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/spinner_category"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinner_category"
        android:drawableLeft="@mipmap/view_exp"
        android:text="@string/view_exp" />

    <Switch
        android:id="@+id/switch_view_all_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/view_exp_all" />

</RelativeLayout>
